Sprint 3 update
